# PICM

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  first.json  parashow.py  taylorgreen.json  test.json
results/: simulation.pvd  wave_0000.vti  wave_0001.vti  wave_0002.vti  wave_0003.vti  wave_0004.vti  wave_0005.vti  wave_0006.vti  wave_0007.vti  wave_0008.vti  wave_0009.vti
src/: CMakeLists.txt  main.cpp
src/core/: BetterOutputWriter.cpp  BetterOutputWriter.hpp  Fields.cpp  Fields.hpp  Grid2D.cpp  Grid2D.hpp  OutputWriter.cpp  OutputWriter.hpp  Parameters.cpp  Parameters.hpp  Precision.hpp  SceneObjects.cpp  SceneObjects.hpp  advect.cpp  project.cpp  project.hpp
src/core/v0.0/: project.cpp  project.hpp
src/solvers/: div.cpp
src/solvers/SemiLagrangian/: Advect.cpp  IterativeMethods.cpp  Project.cpp  SemiLagrangian.cpp  SemiLagrangian.hpp  project.cpp  project.hpp
test/: test.json
